fix: remove unnecessary margin and overflow properties in CSS files

--- a/app/components/content/Content.module.css
+++ b/app/components/content/Content.module.css
@@ -1,6 +1,5 @@
 .content {
   margin-block: 1rem;
-  margin-bottom: 50dvh;
   position: relative;
   width: 100%;
   height: 100%;
